feature: add upcasting functionality for DomainEvent and AggregateState classes (#79)
* feature: add upcasting functionality for DomainEvent and AggregateState classes

* implement domain event upcasting in aggregate runtime

* handle copilot codereview comment

* fix code analysis issue